<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="menu_title">My Nanodegree Apps</string>

    <string name="project1_title">Spotify Streamer</string>
    <string name="project2_title">Football Scores App</string>
    <string name="project3_title">Library App</string>
    <string name="project4_title">Build It Bigger</string>
    <string name="project5_title">Wine Reader</string>
    <string name="project6_title">Capstone: My Own App</string>
</resources>
